<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter</string>
    <string name="action_settings">Compose</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Log in</string>
    <string name="title_activity_timeline">TimelineActivity</string>
    <string name="cancel">Cancel</string>
    <string name="tweet">Tweet</string>
    <string name="tweet_hint">What\'s happening?</string>
    <string name="profile_image">Profile Image</string>
    <string name="max_tweet_length">140</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_search">SearchActivity</string>

</resources>